tests/errors/missing_pins.nm
component Foo {
    pin A: input = 1;
    pin B: input = 2;
    pin C: input = 4;
}